cambio de idioma a inglés
se modificaron las leyendas, etiquetas y contenidos para mostrarse en inglés

--- a/SDEA/src/app/app.component.html
+++ b/SDEA/src/app/app.component.html
@@ -2,7 +2,7 @@
 
     <div class="logo" (click)="navigateInicio()">
         <img src="../assets/unnamed.png">
-        <p> Software de Detección de Estilos de Aprendizaje </p>
+        <p>  Recommendation System for Teaching Strategies according to Learning Styles </p>
     </div>
 
     <button class="logout" (click)="logout()" *ngIf="loggedin()"> <i class="fa-solid fa-right-from-bracket "></i> </button>
