--- a/SDEA/src/app/estudiantes/cuestionario/cuestionario.component.html
+++ b/SDEA/src/app/estudiantes/cuestionario/cuestionario.component.html
@@ -18,7 +18,7 @@
   
     <div class="container boton">
       <!-- Cambia el tipo de botón a "submit" y agrega el atributo form con el valor del identificador del formulario -->
-      <button type="submit" class="btn btn-primary" [disabled]="!miFormulario.valid">Registrar respuestas</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!miFormulario.valid">Record responses</button>
     </div>
   </form>
   
