--- a/SDEA/src/app/login/login.component.html
+++ b/SDEA/src/app/login/login.component.html
@@ -7,29 +7,29 @@
 
         <div class="login">
 
-            <h2> Iniciar Sesión </h2>
+            <h2> Log in </h2>
 
             <div class="icons">
                 <button class="btn" [ngClass]="{selected: activeClass}" (click)="navigateTo('estudiante')">
                     <i class="fa-solid fa-user fa-lg"></i>
-                    <p>Estudiante</p>
+                    <p>Student</p>
                 </button>
                 <button class="btn" [ngClass]="{selected: !activeClass}" (click)="navigateTo('profesor')">
                     <i class="fa-solid fa-chalkboard-user fa-lg"></i>
-                    <p>Profesor</p>
+                    <p>Teacher</p>
                 </button>
             </div>
 
             <div class="inputs">
-                <input placeholder="Numero de cuenta" type="text" name="" id="user" formControlName = "nro_cuenta">
+                <input placeholder="Account number" type="text" name="" id="user" formControlName = "nro_cuenta">
             </div>
             
             <div class="inputs pass">
-                <input placeholder="Contraseña" type="password" name="" id="pass" formControlName = "password" >
+                <input placeholder="Password" type="password" name="" id="pass" formControlName = "password" >
             </div>
 
             <button type="button" class="login_btn" (click)="sendLogin()">
-                LOGIN
+                Log in
             </button>
         </div>
     </form>
