--- a/SREE-Front/src/app/login/login.component.html
+++ b/SREE-Front/src/app/login/login.component.html
@@ -9,16 +9,16 @@
   <body>
     <app-header></app-header>
     <div class="login-box">
-      <h1>Iniciar sesión</h1>
+      <h1>Log in</h1>
       <form (submit)="iniciarSesion()">
         <!-- USERNAME INPUT -->
-        <label for="username">Numero de Empleado</label>
-        <input type="text" placeholder="Ingrese su Numero de Empleado" name="nroCuenta" [(ngModel)]="nroEmpleado">
+        <label for="username">Employee number</label>
+        <input type="text" placeholder="Enter your Employee Number" name="nroCuenta" [(ngModel)]="nroEmpleado">
         <!-- PASSWORD INPUT -->
-        <label for="password">Contraseña</label>
-        <input type="password" placeholder="Ingrese su contraseña" name="contra" [(ngModel)]="contra">
+        <label for="password">Password</label>
+        <input type="password" placeholder="Enter your password" name="contra" [(ngModel)]="contra">
         <button type="submit" class="">Log In</button>
-        <a href="#">Olvidaste tu contraseña?</a><br>
+        <a href="#">Did you forget your password??</a><br>
       </form>
     </div>
     
